k8s/apps/media/arr/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: arr
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: sonarr
      labels:
        app: sonarr
    spec:
      nodeSelector:
        topology.kubernetes.io/zone: cantor
      securityContext:
        runAsNonRoot: true
        runAsUser: 2501
        runAsGroup: 2501
        fsGroup: 2501
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: sonarr
          image: ghcr.io/onedr0p/sonarr:4.0.9 # renovate: docker=ghcr.io/onedr0p/sonarr
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ "ALL" ]
          ports:
            - name: http
              containerPort: 8989
          volumeMounts:
            - name: sonarr-config
              mountPath: /config
            - name: tmp
              mountPath: /tmp
            - name: data
              mountPath: /app/data
          resources:
            requests:
              cpu: 50m
              memory: 384Mi
            limits:
              cpu: 1000m
              memory: 512Mi
      volumes:
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: tmp
          emptyDir: { }
        - name: data
          nfs:
            server: 192.168.50.117
            path: /mnt/pool-0/data
